[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EC_API"
version = "0.1.0"
authors = [
  { name="Dexter S.-H. HON", email="dex-hon-sci@outlook.com" },
]
description = "API for market access."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "Proprietary"}

[project.urls]
Homepage = "https://github.com/dex-hon-sci/EC_API"
Issues = "https://github.com/dex-hon-sci/EC_API/issues"

[tool.setuptools]
# IMPORTANT: only search packages under the EC_API directory
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["EC_API*"]

exclude = [
 "images/*",
  "tests*",
  "EC_API.tests*",
  "**/__pycache__",
  "**/*.pyc",
  "**/*.pyo",
  "**/*.pyd",
  "build*",
  "dist*",
  "*.egg-info*",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
addopts = "--cov=EC_API --cov-report=term-missing --cov-omit=EC_API/ext/WebAPI/* --ignore=tests/unit/action/test_action.py"
#addopts = "--cov=EC_API --cov-fail-under=80 --cov-report=term-missing --ignore=tests/unit/action/test_action.py"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["EC_API/ext/"]


